# parser

./: .coverage  .gitignore  CLAUDE.md  README.md  app.py  application.py  config.py  main.py  plan.md  pyproject.toml  requirements.txt
api/: auth.py  auth_api.py  batch.py  batch_api.py  data.py  data_api.py  health.py  project.py  project_api.py  template.py  template_api.py  upload.py  upload_api.py
config/: local.example.yaml  local.yaml  prod.yaml
contexts/: container.py
core/: cell_unmerger.py  data_extractor.py  header_flattener.py  logging.py  pipeline.py  stop_detector.py  validator.py
db/: bootstrap.py  config.py  connection.py  engine.py  models.py  primitives.py  schema.py  seed.py  tables.py
docs/: excel-tail-patterns.md  ui-backend-gap-analysis.md
excel/: 01 电源A项目动态成本基础表-0714.xlsx  xxx项目主体施工动态成本表-样式 - 副本.xlsx
middleware/: auth.py  cors.py  logging.py
models/: batch.py  project.py  template.py  user.py
parser/: app.py
repositories/: __init__.py  base.py  base_repository.py  batch.py  batch_repository.py  data.py  data_repository.py  project.py  project_repository.py  template.py  template_repository.py  user.py  user_repository.py
services/: __init__.py  auth.py  auth_service.py  batch.py  batch_service.py  data.py  data_service.py  errors.py  project.py  project_service.py  template.py  template_service.py  upload.py  upload_service.py
tests/: conftest.py  test_alert_app_service.py  test_alert_domain.py  test_alert_event_handlers.py  test_alert_metric_provider.py  test_alert_push.py  test_analytics_exports_notifications.py  test_analytics_hierarchy.py  test_analytics_read_models.py  test_analytics_settlement_profit.py  test_application_assembly.py  test_auth_middleware.py  test_auth_security.py  test_cell_unmerger.py  test_db.py  (+27 more)
(+211 files in other folders)
