[project]
name = "parser"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "sanic>=24.6.0",
    "sanic-ext>=24.6.0",
    "aiomysql>=0.2.0",
    "tortoise-orm[aiomysql]>=1.1.7",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-sanic>=1.9.0",
    "aiofiles",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "asyncio: run async tests with pytest-asyncio",
]
filterwarnings = [
    "ignore:Table .* already exists:Warning",
]
